--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Jony</title>
+    <title>test</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -79,9 +79,9 @@
                 <div class="row align-items-center position-relative">
                     <div class="col-lg-9">
                         <div class="slider_text">
-                            <h3>안녕하세요!! <br>
+                            <h3>DataScientist <br>
                                 <span>Creative Director</span></h3>
-                        <a class="boxed-btn3-line" href="#">View Works</a>
+                        <a class="boxed-btn3-line" href="#portfolio">View Works</a>
                         </div>
                     </div>
                     <div class="my_img d-none d-lg-block">
@@ -196,7 +196,7 @@
     <!-- service_area end  -->
 
     <!-- gallery_area start  -->
-    <div class="gallery_area">
+    <div id="portfolio" class="gallery_area">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
