--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>test</title>
+    <title>portfolio</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -80,7 +80,7 @@
                     <div class="col-lg-9">
                         <div class="slider_text">
                             <h3>DataScientist <br>
-                                <span>Creative Director</span></h3>
+                                <span>DataScientist</span></h3>
                         <a class="boxed-btn3-line" href="#portfolio">View Works</a>
                         </div>
                     </div>
