--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <img src="img/svg_icon/1.svg" alt="">
                         </div>
                         <h3>
-                                Web & Mobile Design
+                                NLP(BERT/Tensorflow)
                         </h3>
                         <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem vitae tristique ante ibero</p>
                     </div>
@@ -174,7 +174,7 @@
                             <img src="img/svg_icon/2.svg" alt="">
                         </div>
                         <h3>
-                                Web Development
+                                Python/SQL/Spark 
                         </h3>
                         <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem vitae tristique ante ibero</p>
                     </div>
