--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="row align-items-center position-relative">
                     <div class="col-lg-9">
                         <div class="slider_text">
-                            <h3>testmonial<br>
+                            <h3 class="nanum">안녕하세요<br>
                                 <span>DataScientist</span></h3>
                         <a class="boxed-btn3-line" href="#portfolio">View Works</a>
                         </div>
