--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="col-xl-10">
                     <div class="download_text">
                         <iframe width=“560” height=“315” src=“” frameborder=“0” allow=“accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture” allowfullscreen=“” style=“position: absolute; width:100%; height:100%;”></iframe>     
-                        <h3>I’m a Creative director based on New York, who loves clean, simple & unique design. I also enjoy crafting </h3>
+                        <h3 class="nanum">I’m a Creative director based on New York, who loves clean, simple & unique design. I also enjoy crafting </h3>
                     </div>
                 </div>
             </div>
