--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <div class="row align-items-center position-relative">
                     <div class="col-lg-9">
                         <div class="slider_text">
-                            <h3 class="nanum">안녕하세요<br>
-                                <span>DataScientist</span></h3>
+                            <h3 class="nanum">안녕하세요! <br>
+                                <span>데이터사이언티스트 김정한입니다.</span></h3>
                         <a class="boxed-btn3-line" href="#portfolio">View Works</a>
                         </div>
                     </div>
