--- a/index.html
+++ b/index.html
@@ -55,9 +55,6 @@
                             </div>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
-                                    <div class="book_btn d-none d-lg-block">
-                                        <a href="#">Let’s Talk</a>
-                                    </div>
                                 </div>
                             </div>
                             <div class="col-12">
@@ -79,8 +76,8 @@
                 <div class="row align-items-center position-relative">
                     <div class="col-lg-9">
                         <div class="slider_text">
-                            <h3 class="nanum">안녕하세요! <br>
-                                <span>데이터사이언티스트 김정한입니다.</span></h3>
+                            <h1 class="nanum">" 안녕하세요~ 인문학적 감성을 가진<br>
+                                <span></span>데이터사이언티스트 김정한입니다 ”  </h1>
                         <a class="boxed-btn3-line" href="#portfolio">View Works</a>
                         </div>
                     </div>
@@ -98,18 +95,21 @@
             <div class="row">
                 <div class="col-xl-10">
                     <div class="download_text">
-                        <iframe width=“560” height=“315” src=“” frameborder=“0” allow=“accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture” allowfullscreen=“” style=“position: absolute; width:100%; height:100%;”></iframe>     
-                        <h3 class="nanum">I’m a Creative director based on New York, who loves clean, simple & unique design. I also enjoy crafting </h3>
+                        
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/4GnVDPD01as?controls=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"></iframe>
+
+                        <h3 class="nanum">"I'm loyal & trustworthy"</h3>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-md-6">
                     <div class="download_left">
-                        <p>Proin laoreet elementum ligula, ac tincidunt lorem accumsan nec. Fusce eget urna ante. Donec massa velit, varius a accumsan ac, tempor iaculis massa. Sed placerat justo sed libero varius vulputate. Ut a mi tempus massa malesuada fermentum.
+                        <p>처음 데이터 사이언티스트라는 글을 우연히 접한 Harvard Business Review에 실린 Data Scientist: The Sexiest Job of the 21st Century 라는 글을 읽고 관심이 생겼습니다.  앞으로 세상이 변해간다면 “데이터를 기반으로 한 세상이 될 것” 이라는 생각으로  세상의 흐름에 잘 따라가며 살아가기 위해 데이터를 이해하고 활용하는 능력이 향후 중요한 부분이 되겠다고 느꼈습니다. 
+
                         </p>
                         <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem, vitae tristique ante. Cras pretium rutrum egestas. Integer ultrices libero sed justo vehicula, eget </p>
-                        <a target="_blank" href="https://github.com/KIMS-Github" class="boxed-btn3-line">Git Link</a>
+                        <!-- <a target="_blank" href="https://github.com/KIMS-Github" class="boxed-btn3-line">Git Link</a> -->
                     </div>
                 </div>
                 <div class="col-lg-5 offset-lg-1 col-md-6">
@@ -153,7 +153,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title mb-50">
-                        <h3>My Services</h3>
+                        <h3>Areas of Interest</h3>
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                             <img src="img/svg_icon/1.svg" alt="">
                         </div>
                         <h3>
-                                NLP(BERT/Tensorflow)
+                                NLP(KorBERT/Tensorflow)
                         </h3>
                         <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem vitae tristique ante ibero</p>
                     </div>
@@ -212,6 +212,15 @@
                         <div class="col-xl-6 col-lg-6 col-md-6">
                             <div class="single_gallery">
                                 <div class="thumb">
+                                    <img src="img/gallery/0.png" alt="">
+                                </div>
+                                <div class="gallery_heading">
+                                    <span>Mobile App</span>
+                                    <a href="works_details.html"><h4>Colorlib App Project</h4></a>
+                                </div>
+                            </div>
+                            <div class="single_gallery">
+                                <div class="thumb">
                                     <img src="img/gallery/1.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
@@ -247,13 +256,6 @@
                                     <span>Mobile App</span>
                                     <a href="works_details.html"><h4>Colorlib App Project</h4></a>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="more_works">
-                                    <a class="boxed-btn3-line" href="#">More Works</a>
                             </div>
                         </div>
                     </div>
@@ -362,26 +364,8 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="single_links d-flex justify-content-between align-items-center">
-                            <span>Behance</span>
-                            <a href="#"> <i class="fa fa-behance"></i> </a>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="single_links d-flex justify-content-between align-items-center">
-                            <span>Dribbble</span>
-                            <a href="#"> <i class="fa fa-dribbble"></i> </a>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="single_links d-flex justify-content-between align-items-center">
-                            <span>Medium</span>
-                            <a href="#"> <i class="fa fa-medium"></i> </a>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="single_links d-flex justify-content-between align-items-center">
-                            <span>Linkedin</span>
-                            <a href="#"> <i class="fa fa-linkedin"></i> </a>
+                            <span>Github</span>
+                            <a href="#"> <i class="fa fa-github"></i> </a>
                         </div>
                     </div>
                 </div>
