--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
                         <p>처음 데이터 사이언티스트라는 글을 우연히 접한 Harvard Business Review에 실린 Data Scientist: The Sexiest Job of the 21st Century 라는 글을 읽고 관심이 생겼습니다.  앞으로 세상이 변해간다면 “데이터를 기반으로 한 세상이 될 것” 이라는 생각으로  세상의 흐름에 잘 따라가며 살아가기 위해 데이터를 이해하고 활용하는 능력이 향후 중요한 부분이 되겠다고 느꼈습니다. 
 
                         </p>
-                        <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem, vitae tristique ante. Cras pretium rutrum egestas. Integer ultrices libero sed justo vehicula, eget </p>
                         <!-- <a target="_blank" href="https://github.com/KIMS-Github" class="boxed-btn3-line">Git Link</a> -->
                     </div>
                 </div>
@@ -365,7 +364,7 @@
                     <div class="col-md-3">
                         <div class="single_links d-flex justify-content-between align-items-center">
                             <span>Github</span>
-                            <a href="#"> <i class="fa fa-github"></i> </a>
+                            <a target="_blank" href="https://github.com/KIMS-Github" class="boxed-btn3-line"> <i class="fa fa-github"></i> </a>
                         </div>
                     </div>
                 </div>
