--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
                 <div class="row align-items-center position-relative">
                     <div class="col-lg-9">
                         <div class="slider_text">
-                            <h1 class="nanum">" 안녕하세요~ 인문학적 감성을 가진<br>
-                                <span></span>데이터사이언티스트 김정한입니다 ”  </h1>
+                            <h1 class="nanum">" 안녕하세요~ 인문학적 감성을 가진<h1>
+                                <p></p>
+                                <h1 class="nanum">    데이터 사이언티스트 김정한입니다 ”<h1> 
+                                    <p></p>  
+                                    <p></p>      
                         <a class="boxed-btn3-line" href="#portfolio">View Works</a>
                         </div>
                     </div>
@@ -98,15 +101,16 @@
                         
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/4GnVDPD01as?controls=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
-                        <h3 class="nanum">"I'm loyal & trustworthy"</h3>
+                        <h3 class="nanum">" I'm loyal & trustworthy "</h3>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-md-6">
                     <div class="download_left">
-                        <p>처음 데이터 사이언티스트라는 글을 우연히 접한 Harvard Business Review에 실린 Data Scientist: The Sexiest Job of the 21st Century 라는 글을 읽고 관심이 생겼습니다.  앞으로 세상이 변해간다면 “데이터를 기반으로 한 세상이 될 것” 이라는 생각으로  세상의 흐름에 잘 따라가며 살아가기 위해 데이터를 이해하고 활용하는 능력이 향후 중요한 부분이 되겠다고 느꼈습니다. 
-
+                        <p>데이터 사이언티스트라는 직업에 관한 Harvard Business Review에 실린 Data Scientist: The Sexiest Job of the 21st Century 라는 글을 읽고 관심이 생겼습니다. </p> 
+                        <p>앞으로 세상이 변해간다면 “데이터를 기반으로 한 세상이 될 것” 이라는 생각으로  세상의 흐름에 잘 따라가며 살아가기 위해 데이터를 이해하고 활용하는 능력이 향후 중요한 부분이 되겠다고 느꼈습니다. </p>
+                        <p>    비즈니스가 발전하면서 기업의 라이프사이클마다 목표를 달성하기 위한 부분과 실제 업무현안부분에서 여러가지 문제가 발생하는데 이를 바르게 정의하고, 이를 해결하기 위해 확률, 통계적인 기법과 수학을 기본으로 한 프로그래밍으로 데이터에서 답을 찾겠습니다.
                         </p>
                         <!-- <a target="_blank" href="https://github.com/KIMS-Github" class="boxed-btn3-line">Git Link</a> -->
                     </div>
@@ -115,7 +119,16 @@
                     <div class="progress_skills">
                         <div class="single_progress">
                             <div class="label d-flex justify-content-between">
-                                <span>Wireframing</span>
+                                <span>Python, SQL</span>
+                                <span>90%</span>
+                            </div>
+                                <div class="progress">
+                                        <div class="progress-bar " role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                      </div>
+                        </div>
+                        <div class="single_progress">
+                            <div class="label d-flex justify-content-between">
+                                <span>Visualization / Communication Skill</span>
                                 <span>90%</span>
                             </div>
                                 <div class="progress">
@@ -124,7 +137,7 @@
                         </div>
                         <div class="single_progress">
                                 <div class="label d-flex justify-content-between">
-                                        <span>UI/UX</span>
+                                        <span>M/L D/L</span>
                                         <span>70%</span>
                                     </div>
                                 <div class="progress">
@@ -133,7 +146,7 @@
                         </div>
                         <div class="single_progress">
                                 <div class="label d-flex justify-content-between">
-                                        <span>Interaction design</span>
+                                        <span>Tableau, Google Analytics</span>
                                         <span>45%</span>
                                     </div>
                                 <div class="progress">
@@ -163,9 +176,9 @@
                             <img src="img/svg_icon/1.svg" alt="">
                         </div>
                         <h3>
-                                NLP(KorBERT/Tensorflow)
+                                Natural Language Process
                         </h3>
-                        <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem vitae tristique ante ibero</p>
+                        <p>자연어처리를 통해 텍스트데이터를 다루는 분야, Chat-Bot, 감성분석</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -174,9 +187,9 @@
                             <img src="img/svg_icon/2.svg" alt="">
                         </div>
                         <h3>
-                                Python/SQL/Spark 
+                                M/L D/L
                         </h3>
-                        <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem vitae tristique ante ibero</p>
+                        <p>지도학습과 비지도학습을 통한 머신러닝, 인공신경망구조의 딥러닝</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -185,9 +198,9 @@
                             <img src="img/svg_icon/3.svg" alt="">
                         </div>
                         <h3>
-                                E-commerce
+                                E-commerce & Marketing
                         </h3>
-                        <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem vitae tristique ante ibero</p>
+                        <p>데이터기반 퍼포먼스 마케팅, 그로스해킹, 인사이트를 도출, 고객가치 실현</p>
                     </div>
                 </div>
             </div>
@@ -201,7 +214,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title mb-50">
-                        <h3>My Works</h3>
+                        <h3>My Works, 무엇을 좋아하실지 몰라 다 준비했어요~^^</h3>
                     </div>
                 </div>
             </div>
@@ -214,8 +227,8 @@
                                     <img src="img/gallery/0.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
-                                    <span>Mobile App</span>
-                                    <a href="works_details.html"><h4>Colorlib App Project</h4></a>
+                                    <span>github</span>
+                                    <a href="works_details.html"><h4>Github Heatmap</h4></a>
                                 </div>
                             </div>
                             <div class="single_gallery">
@@ -223,8 +236,8 @@
                                     <img src="img/gallery/1.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
-                                    <span>Mobile App</span>
-                                    <a href="works_details.html"><h4>Colorlib App Project</h4></a>
+                                    <span>scrapy</span>
+                                    <a href="works_details.html"><h4>Web Crawling Project</h4></a>
                                 </div>
                             </div>
                             <div class="single_gallery">
@@ -232,8 +245,8 @@
                                     <img src="img/gallery/2.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
-                                    <span>Mobile App</span>
-                                    <a href="works_details.html"><h4>Colorlib App Project</h4></a>
+                                    <span>NLP</span>
+                                    <a href="works_details.html"><h4>Word2Vec by TensorFlow</h4></a>
                                 </div>
                             </div>
                         </div>
@@ -243,8 +256,8 @@
                                     <img src="img/gallery/3.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
-                                    <span>Mobile App</span>
-                                    <a href="works_details.html"><h4>Colorlib App Project</h4></a>
+                                    <span>NLP</span>
+                                    <a href="works_details.html"><h4>KorBERT by TensorFlow</h4></a>
                                 </div>
                             </div>
                             <div class="single_gallery">
@@ -253,7 +266,7 @@
                                 </div>
                                 <div class="gallery_heading">
                                     <span>Mobile App</span>
-                                    <a href="works_details.html"><h4>Colorlib App Project</h4></a>
+                                    <a href="works_details.html"><h4>App Project</h4></a>
                                 </div>
                             </div>
                         </div>
@@ -263,88 +276,6 @@
         </div>
     </div>
     <!-- gallery_area end  -->
-
-        <!-- testimonial_area  -->
-        <div class="testimonial_area ">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-12">
-                        <div class="section_title">
-                            <h3>What Clients say</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xl-12">
-                        <div class="testmonial_active owl-carousel">
-                            <div class="single_carousel">
-                                <div class="row">
-                                    <div class="col-xl-9 col-md-9">
-                                        <div class="single_testmonial">
-                                            <p>“There are many variations of passages of Lorem Ipsum available, but the majority
-                                                have suffered alteration in some form by injected humour or randomised words
-                                                which don’t look even slightly believable. If you are going to use a passage.
-                                            </p>
-                                            <div class="testmonial_author">
-                                                <div class="thumb">
-                                                    <img src="img/case/testmonial.png" alt="">
-                                                </div>
-                                                <div class="author_name">
-                                                    <h3>Kalvin Piterson</h3>
-                                                    <span>Business Owner</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single_carousel">
-                                <div class="row">
-                                    <div class="col-xl-9 col-md-9">
-                                        <div class="single_testmonial">
-                                            <p>“There are many variations of passages of Lorem Ipsum available, but the majority
-                                                have suffered alteration in some form by injected humour or randomised words
-                                                which don’t look even slightly believable. If you are going to use a passage.
-                                            </p>
-                                            <div class="testmonial_author">
-                                                <div class="thumb">
-                                                    <img src="img/case/testmonial.png" alt="">
-                                                </div>
-                                                <div class="author_name">
-                                                    <h3>Kalvin Piterson</h3>
-                                                    <span>Business Owner</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single_carousel">
-                                <div class="row">
-                                    <div class="col-xl-9 col-md-9">
-                                        <div class="single_testmonial">
-                                            <p>“There are many variations of passages of Lorem Ipsum available, but the majority
-                                                have suffered alteration in some form by injected humour or randomised words
-                                                which don’t look even slightly believable. If you are going to use a passage.
-                                            </p>
-                                            <div class="testmonial_author">
-                                                <div class="thumb">
-                                                    <img src="img/case/testmonial.png" alt="">
-                                                </div>
-                                                <div class="author_name">
-                                                    <h3>Kalvin Piterson</h3>
-                                                    <span>Business Owner</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <!-- /testimonial_area  -->
     
 
@@ -356,7 +287,8 @@
                     <div class="col-lg-8">
                         <div class="lets_talk">
                             <h3>Do you have any Project? <a href="#">Let’s Talk</a> </h3>
-                            <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem, vitae tristique ante. Cras pretium rutrum egestas. Integer ultrices libero sed justo vehicula, eget tincidunt tortor tempus.</p>
+                            <p>아래의 Github 계정을 통해 진행된 프로젝트를 보실수 있고, 지속적으로 공부해 나가는 모습도 봐주시기 바랍니다. 
+                                감사합니다.</p>
                         </div>
                     </div>
                 </div>
