--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                 <div class="row align-items-center position-relative">
                     <div class="col-lg-9">
                         <div class="slider_text">
-                            <h1 class="nanum">" 안녕하세요~ 인문학적 감성을 가진<h1>
+                            <h1 class="nanum">" 안녕하세요~ <strong>인문학적 감성</strong>을 가진<h1>
                                 <p></p>
-                                <h1 class="nanum">    데이터 사이언티스트 김정한입니다 ”<h1> 
+                                <h1 class="nanum">    <strong>데이터 사이언티스트</strong> 김정한입니다 ”<h1> 
                                     <p></p>  
                                     <p></p>      
                         <a class="boxed-btn3-line" href="#portfolio">View Works</a>
@@ -101,15 +101,15 @@
                         
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/4GnVDPD01as?controls=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
-                        <h3 class="nanum">" I'm loyal & trustworthy "</h3>
+                        <h4 class="Natural"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 저를 표현하는 한문장 " I'm loyal & trustworthy "</h4>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-md-6">
                     <div class="download_left">
-                        <p>데이터 사이언티스트라는 직업에 관한 Harvard Business Review에 실린 Data Scientist: The Sexiest Job of the 21st Century 라는 글을 읽고 관심이 생겼습니다. </p> 
-                        <p>앞으로 세상이 변해간다면 “데이터를 기반으로 한 세상이 될 것” 이라는 생각으로  세상의 흐름에 잘 따라가며 살아가기 위해 데이터를 이해하고 활용하는 능력이 향후 중요한 부분이 되겠다고 느꼈습니다. </p>
+                        <p>데이터 사이언티스트라는 직업에 관한 <strong> Business Review에 실린 Data Scientist: The Sexiest Job of the 21st Century </strong> 라는 글을 읽고 관심이 생겼습니다. </p> 
+                        <p>앞으로 세상이 변해간다면 <strong> “데이터를 기반으로 한 세상이 될 것” </strong> 이라는 생각으로  세상의 흐름에 잘 따라가며 살아가기 위해 데이터를 이해하고 활용하는 능력이 향후 중요한 부분이 되겠다고 느꼈습니다. </p>
                         <p>    비즈니스가 발전하면서 기업의 라이프사이클마다 목표를 달성하기 위한 부분과 실제 업무현안부분에서 여러가지 문제가 발생하는데 이를 바르게 정의하고, 이를 해결하기 위해 확률, 통계적인 기법과 수학을 기본으로 한 프로그래밍으로 데이터에서 답을 찾겠습니다.
                         </p>
                         <!-- <a target="_blank" href="https://github.com/KIMS-Github" class="boxed-btn3-line">Git Link</a> -->
@@ -119,7 +119,7 @@
                     <div class="progress_skills">
                         <div class="single_progress">
                             <div class="label d-flex justify-content-between">
-                                <span>Python, SQL</span>
+                                <span> <strong> Python, SQL </strong> </span>
                                 <span>90%</span>
                             </div>
                                 <div class="progress">
@@ -128,7 +128,7 @@
                         </div>
                         <div class="single_progress">
                             <div class="label d-flex justify-content-between">
-                                <span>Visualization / Communication Skill</span>
+                                <span> <strong> Visualization / Communication Skill </strong> </span>
                                 <span>90%</span>
                             </div>
                                 <div class="progress">
@@ -137,7 +137,7 @@
                         </div>
                         <div class="single_progress">
                                 <div class="label d-flex justify-content-between">
-                                        <span>M/L D/L</span>
+                                        <span> <strong> M/L D/L </strong> </span>
                                         <span>70%</span>
                                     </div>
                                 <div class="progress">
@@ -146,7 +146,7 @@
                         </div>
                         <div class="single_progress">
                                 <div class="label d-flex justify-content-between">
-                                        <span>Tableau, Google Analytics</span>
+                                        <span> <strong> Tableau, Google Analytics </strong> </span>
                                         <span>45%</span>
                                     </div>
                                 <div class="progress">
@@ -178,7 +178,7 @@
                         <h3>
                                 Natural Language Process
                         </h3>
-                        <p>자연어처리를 통해 텍스트데이터를 다루는 분야, Chat-Bot, 감성분석</p>
+                        <p>자연어처리를 통해 텍스트데이터를 다루는 <br> 분야, Chat-Bot, 감성분석</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -189,7 +189,7 @@
                         <h3>
                                 M/L D/L
                         </h3>
-                        <p>지도학습과 비지도학습을 통한 머신러닝, 인공신경망구조의 딥러닝</p>
+                        <p>지도학습과 비지도학습을 통한 머신러닝 <br> 인공신경망구조의 딥러닝</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -200,7 +200,7 @@
                         <h3>
                                 E-commerce & Marketing
                         </h3>
-                        <p>데이터기반 퍼포먼스 마케팅, 그로스해킹, 인사이트를 도출, 고객가치 실현</p>
+                        <p>데이터기반 퍼포먼스 마케팅, 그로스해킹 <br> 인사이트를 도출, 고객가치 실현</p>
                     </div>
                 </div>
             </div>
@@ -214,7 +214,8 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title mb-50">
-                        <h3>My Works, 무엇을 좋아하실지 몰라 다 준비했어요~^^</h3>
+                        <h3>My Works</h3>
+                        <p>"포트폴리오 웹페이지 작업중으로 Thumbnail 이미지를 보실 수 있으며 자세한내용은 아래의 Github 링크를통해 보실 수 있습니다."</p>
                     </div>
                 </div>
             </div>
@@ -228,7 +229,7 @@
                                 </div>
                                 <div class="gallery_heading">
                                     <span>github</span>
-                                    <a href="works_details.html"><h4>Github Heatmap</h4></a>
+                                    <a href="works_details.html"><h4>2020 Github Heatmap</h4></a>
                                 </div>
                             </div>
                             <div class="single_gallery">
@@ -286,9 +287,11 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="lets_talk">
-                            <h3>Do you have any Project? <a href="#">Let’s Talk</a> </h3>
-                            <p>아래의 Github 계정을 통해 진행된 프로젝트를 보실수 있고, 지속적으로 공부해 나가는 모습도 봐주시기 바랍니다. 
-                                감사합니다.</p>
+                            <h3>Do you have any Project and Idea? <a href="#">Let’s Talk</a> </h3>
+                            <p>아래의 링크를 통해 <strong>Github</strong>에 진행된 프로젝트와 Repository를 보다 자세하게 보실 수 있습니다. 
+                            방문해 주셔서 감사합니다.</p>
+                            <p><strong>kims.github@gmail.com</strong></p>   
+
                         </div>
                     </div>
                 </div>
