--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6">
                     <div class="download_left">
-                        <p>데이터 사이언티스트라는 직업에 관한 <strong> Business Review에 실린 Data Scientist: The Sexiest Job of the 21st Century </strong> 라는 글을 읽고 관심이 생겼습니다. </p> 
+                        <p>데이터 사이언티스트라는 직업에 관한 
+                            <a href = https://hbr.org/2012/10/data-scientist-the-sexiest-job-of-the-21st-century>Business Review에 실린 Data Scientist: The Sexiest Job of the 21st Century 라는 글을 읽고 관심이 생겼습니다.</a></a></p> 
                         <p>앞으로 세상이 변해간다면 <strong> “데이터를 기반으로 한 세상이 될 것” </strong> 이라는 생각으로  세상의 흐름에 잘 따라가며 살아가기 위해 데이터를 이해하고 활용하는 능력이 향후 중요한 부분이 되겠다고 느꼈습니다. </p>
                         <p>    비즈니스가 발전하면서 기업의 라이프사이클마다 목표를 달성하기 위한 부분과 실제 업무현안부분에서 여러가지 문제가 발생하는데 이를 바르게 정의하고, 이를 해결하기 위해 확률, 통계적인 기법과 수학을 기본으로 한 프로그래밍으로 데이터에서 답을 찾겠습니다.
                         </p>
@@ -215,15 +216,13 @@
                 <div class="col-xl-12">
                     <div class="section_title mb-50">
                         <h3>My Works</h3>
-                        <p>"포트폴리오 웹페이지 작업중으로 Thumbnail 이미지를 보실 수 있으며 자세한내용은 아래의 Github 링크를통해 보실 수 있습니다."</p>
+                        <p>"포트폴리오 웹페이지 작업중으로 <strong> Thumbnail </strong>이미지를 보실 수 있으며 자세한 내용은 아래의 <strong> Github </strong> 링크를 통해 보실 수 있습니다."</p>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-xl-10 col-lg-10">
-                    <div class="row">
-                        <div class="col-xl-6 col-lg-6 col-md-6">
-                            <div class="single_gallery">
+                    <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/0.png" alt="">
                                 </div>
@@ -232,6 +231,8 @@
                                     <a href="works_details.html"><h4>2020 Github Heatmap</h4></a>
                                 </div>
                             </div>
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6 col-md-6">
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/1.png" alt="">
@@ -288,10 +289,9 @@
                     <div class="col-lg-8">
                         <div class="lets_talk">
                             <h3>Do you have any Project and Idea? <a href="#">Let’s Talk</a> </h3>
-                            <p>아래의 링크를 통해 <strong>Github</strong>에 진행된 프로젝트와 Repository를 보다 자세하게 보실 수 있습니다. 
+                            <p>아래의 링크를 통해 <strong>Github</strong>에 진행된 프로젝트와 Repository를 보다 자세하게 보실 수 있습니다.<br> 
                             방문해 주셔서 감사합니다.</p>
-                            <p><strong>kims.github@gmail.com</strong></p>   
-
+                            <p> <strong> kims.github@gmail.com </strong> </p>
                         </div>
                     </div>
                 </div>
@@ -312,7 +312,7 @@
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"> </i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
