--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6">
                     <div class="download_left">
+                        <br>
+                        <h5> <strong> About me </strong> </h5>
                         <p>데이터 사이언티스트라는 직업에 관한 
                             <a href = https://hbr.org/2012/10/data-scientist-the-sexiest-job-of-the-21st-century>Business Review에 실린 Data Scientist: The Sexiest Job of the 21st Century 라는 글을 읽고 관심이 생겼습니다.</a></a></p> 
                         <p>앞으로 세상이 변해간다면 <strong> “데이터를 기반으로 한 세상이 될 것” </strong> 이라는 생각으로  세상의 흐름에 잘 따라가며 살아가기 위해 데이터를 이해하고 활용하는 능력이 향후 중요한 부분이 되겠다고 느꼈습니다. </p>
@@ -116,6 +118,7 @@
                         <!-- <a target="_blank" href="https://github.com/KIMS-Github" class="boxed-btn3-line">Git Link</a> -->
                     </div>
                 </div>
+                <br><br>
                 <div class="col-lg-5 offset-lg-1 col-md-6">
                     <div class="progress_skills">
                         <div class="single_progress">
