--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="col-xl-10">
                     <div class="download_text">
                         
-                        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=rCcfpKMI304" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/rCcfpKMI304" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
                         <h4 class="Natural"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 저를 표현하는 한문장 " I'm loyal & trustworthy "</h4>
                     </div>
