--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
                             <img src="img/svg_icon/1.svg" alt="">
                         </div>
                         <h3>
-                                Natural Language Process
+                                비즈니스분석, 인사이트도출
                         </h3>
-                        <p>자연어처리를 통해 텍스트데이터를 다루는 <br> 분야, Chat-Bot, 감성분석</p>
+                        <p>통계와 머신러닝들을 통한 비즈니스분석 <br> 비지니스문제해결</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -193,7 +193,7 @@
                         <h3>
                                 M/L D/L
                         </h3>
-                        <p>지도학습과 비지도학습을 통한 머신러닝 <br> 인공신경망구조의 딥러닝</p>
+                        <p>머신러닝 <br> 인공신경망구조의 딥러닝</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -204,7 +204,7 @@
                         <h3>
                                 E-commerce & Marketing
                         </h3>
-                        <p>데이터기반 퍼포먼스 마케팅, 그로스해킹 <br> 인사이트를 도출, 고객가치 실현</p>
+                        <p>데이터기반 퍼포먼스 마케팅, 그로스해킹 <br> 인사이트를 도출, 고객가치 실현, 기업성장촉진</p>
                     </div>
                 </div>
             </div>
