--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <h3>
                                 E-commerce & Marketing
                         </h3>
-                        <p>데이터기반 퍼포먼스 마케팅, 그로스해킹 <br> 인사이트를 도출, 고객가치 실현, 기업성장촉진</p>
+                        <p>데이터기반 퍼포먼스 마케팅, 그로스해킹 <br>인사이트 도출, 고객가치 실현, 기업성장촉진</p>
                     </div>
                 </div>
             </div>
@@ -219,7 +219,7 @@
                 <div class="col-xl-12">
                     <div class="section_title mb-50">
                         <h3>My Works</h3>
-                        <p>"포트폴리오 웹페이지 작업중으로 <strong> Thumbnail </strong>이미지를 보실 수 있으며 자세한 내용은 아래의 <strong> Github </strong> 링크를 통해 보실 수 있습니다."</p>
+                        <p>"포트폴리오 웹페이지 작업중으로 <strong> Thumbnail </strong>만 보실수 있으며 자세한 소스코드는 맨 아래의 <strong> Github </strong> 링크를 통해 보실 수 있습니다."</p>
                     </div>
                 </div>
             </div>
@@ -241,8 +241,8 @@
                                     <img src="img/gallery/1.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
-                                    <span>scrapy</span>
-                                    <a href="works_details.html"><h4>Web Crawling Project</h4></a>
+                                    <span>Web Crawling</span>
+                                    <a href="works_details.html"><h4>Web Crawling Project by Scrapy</h4></a>
                                 </div>
                             </div>
                             <div class="single_gallery">
@@ -250,7 +250,7 @@
                                     <img src="img/gallery/2.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
-                                    <span>NLP</span>
+                                    <span>Machine Learning Natural Language Process</span>
                                     <a href="works_details.html"><h4>Word2Vec by TensorFlow</h4></a>
                                 </div>
                             </div>
@@ -261,8 +261,8 @@
                                     <img src="img/gallery/3.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
-                                    <span>NLP</span>
-                                    <a href="works_details.html"><h4>KorBERT by TensorFlow</h4></a>
+                                    <span>선형회귀분석</span>
+                                    <a href="works_details.html"><h4>OLS Regression 기업신용도예측 by Statsmodels</h4></a>
                                 </div>
                             </div>
                             <div class="single_gallery">
@@ -270,8 +270,8 @@
                                     <img src="img/gallery/4.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
-                                    <span>Mobile App</span>
-                                    <a href="works_details.html"><h4>App Project</h4></a>
+                                    <span>Deep Learning Classification</span>
+                                    <a href="works_details.html"><h4>Movie Genre Classification by Pytorch</h4></a>
                                 </div>
                             </div>
                         </div>
@@ -292,7 +292,7 @@
                     <div class="col-lg-8">
                         <div class="lets_talk">
                             <h3>Do you have any Project and Idea? <a href="#">Let’s Talk</a> </h3>
-                            <p>아래의 링크를 통해 <strong>Github</strong>에 진행된 프로젝트와 Repository를 보다 자세하게 보실 수 있습니다.<br> 
+                            <p>아래의 Github링크를 통해 <strong>Github</strong>에 프로젝트와 Repository를 자세하게 보실 수 있습니다.<br> 
                             방문해 주셔서 감사합니다.</p>
                             <p> <strong> kims.github@gmail.com </strong> </p>
                         </div>
@@ -301,7 +301,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="single_links d-flex justify-content-between align-items-center">
-                            <span>Github</span>
+                            <span><strong>Github link</strong></span>
                             <a target="_blank" href="https://github.com/KIMS-Github" class="boxed-btn3-line"> <i class="fa fa-github"></i> </a>
                         </div>
                     </div>
